Resolved wrap issue with skills, added opacity to project photo on hover.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -122,6 +122,11 @@
   min-height: 15rem;
 }
 
+.project-image:hover{
+  opacity: 0.75;
+  cursor: pointer;
+}
+
 .image-container{
   justify-content: center;
 }
@@ -129,6 +134,7 @@
 /* Skills */
 .skills-container{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: inline;
   justify-content: center;
 }
@@ -140,6 +146,7 @@
   width: fit-content;
   margin: 2rem;
   font-size: 8rem;
+
 }
 
 
@@ -249,10 +256,6 @@ html{
 
   .header{
     justify-content: center;
-  }
-
-  .skills-container{
-    flex-wrap: wrap;
   }
 
   #self-portrait {
